@@ -13,6 +13,10 @@ url: "https://googledrive.com/host/0B3fBvzttpiiSNEJFQ1FqanFYVUU/"
 [git]
 url: "https://github.com/libyal/libsmdev.git"
 
+[development]
+main_object: "handle"
+main_object_filename: "/dev/sda"
+
 [tools]
 directory: "smdevtools"
 names: ["smdevinfo"]
